k8s/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:   
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: fatmamosaad/django-mysql-app
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
