k8s/web/sevice.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: clusterIP
